# dagmc_h5m_file_inspector

./: .gitignore  CITATION.cff  README.md  conda_build.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: anaconda-publish.yml  ci_with_install.yml
conda/: meta.yaml
dagmc_h5m_file_inspector/: __init__.py  core.py  inspect-dagmc-h5m-file
src/dagmc_h5m_file_inspector/: __init__.py  cli.py  core.py
tests/: circulartorus.h5m  conftest.py  create_h5m_for_testing.py  cuboid.h5m  cylinder.h5m  dagmc_separated.h5m  ellipticaltorus.h5m  nestedcylinder.h5m  nestedsphere.h5m  sphere.h5m  test_command_line_usage.py  test_python_api_usage.py  tetrahedral.h5m  two_tetrahedrons.h5m  twotouchingcuboids.h5m
