[metadata]
name = dagmc_h5m_file_inspector
author = The dagmc_h5m_file_inspector Development Team
author_email = mail@jshimwell.com
description = Extracts information from DAGMC h5m files including volumes number, material tags
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fusion-energy/dagmc_h5m_file_inspector
license = MIT
license_file = LICENSE.txt
classifiers =
    Natural Language :: English
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Source = https://github.com/fusion-energy/dagmc_h5m_file_inspector
    Tracker = https://github.com/fusion-energy/dagmc_h5m_file_inspector/issues

[options]
packages = find:
scripts =
    dagmc_h5m_file_inspector/inspect-dagmc-h5m-file
python_requires= >=3.6

[options.extras_require]
tests = 
    pytest >= 5.4.3
    requests
    pytest-cov

[flake8]
per-file-ignores = __init__.py:F401
